--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -34,7 +34,7 @@
   style="z-index: 100;border-bottom: 1px solid #eee; ">
   <div class="container">
     <div class="navbar-brand">
-      <a role="button" class="navbar-burger burger {% if page.toc == true %}is-toc{% endif %}" aria-label="menu" aria-expanded="false"
+      <a role="button" class="navbar-burger burger {% if page.toc == true %}enable-toc{% endif %}" aria-label="menu" aria-expanded="false"
         data-target="navbarBasicExample">
         <span class="is-hidden-desktop" aria-hidden="true"></span>
         <span class="is-hidden-desktop" aria-hidden="true"></span>
