add search for every page

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -61,7 +61,7 @@
    
 
         <div class="navbar-item is-hidden-desktop">
-            <a class="button is-light" href="/search">
+            <a class="button is-light search-button" >
                 <i class="fas fa-search 2x"></i>
             </a>
         </div>
@@ -76,7 +76,7 @@
 
       <div class="navbar-end">
          {% include menu.html %}
-        <a class="navbar-item" href="/search" style="padding: inherit 0.6 em;">
+        <a class="navbar-item search-button" style="padding: inherit 0.6 em;">
           <i class="fas fa-search 2x"></i>
         </a>
 
