--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -384,6 +384,21 @@ a:hover .title {
   font-size: 1.05em;
 }
 
+.search-highlight{
+  background-color: #ffdd57;
+  font-weight: bold;
+  padding: 0.2rem 0rem;
+}
+
+.list-search li a{
+  color: #111;
+  line-height: 1.2;
+  padding-bottom: 1.5rem;
+  // margin-bottom: 0.3rem;
+  border-bottom: 1px solid #eee;
+  
+}
+
 .search-close a {
   color: #111;
   visibility: hidden;
