--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -60,6 +60,39 @@ body {
 //   max-width: 42rem;
 // }
 
+// Index PAGE
+
+.profile{
+  border-radius: 50%;
+  width:160px;
+}
+
+.page-section-header{
+  margin-top: 1.5rem;
+  margin-bottom: 2.5rem;
+  text-transform: uppercase;
+  color: #666;
+  font-weight: 600;
+}
+// Index PAGE
+
+// RESUME PAGE
+.resume{
+  &-card {
+    padding: 0.25rem;
+  }
+  &-title {
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #999;
+    font-size: 0.7rem;
+  }
+
+}
+
+// RESUME PAGE
+
+
 // fix on mobile, oversize on mobile
 .columns{
   margin-right: 0rem;
@@ -70,7 +103,7 @@ body {
   padding-right: 0.95rem; 
 }
 .page-container {
-  padding: 2rem 0 1rem 1rem;
+  padding: 3rem 0 1rem 1rem;
   margin: 0 auto;
   max-width: 60rem;
 }
