--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -30,8 +30,7 @@
       </div>
       </header>
       <div style="margin-bottom: 6em;"></div> -->
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation"
-  style="z-index: 100;border-bottom: 1px solid #eee; ">
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
       <a role="button" class="navbar-burger burger {% if page.toc == true %}enable-toc{% endif %}" aria-label="menu" aria-expanded="false"
