--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -13,9 +13,9 @@
   hyphens: auto;
 }
 
-.word-wrap {
-  @include word-wrap();
-}
+// .word-wrap {
+//   @include word-wrap();
+// }
 
 // Import Sass Bulma.io CSS Framework
 $content-heading-line-height: 1.3;
@@ -33,32 +33,6 @@ body {
   position: relative;
   max-width: 60rem;
 }
-
-// @media screen and (min-width: 1088px) {
-//   .container {
-//     max-width: 60rem;
-//     width: 60rem;
-//   }
-// }
-
-// @media screen and (min-width: 1280px) {
-//   .container {
-//     max-width: 1152px;
-//     width: 1152px;
-//   }
-// }
-
-// @media screen and (min-width: 1472px) {
-//   .container {
-//     max-width: 1344px;
-//     width: 1344px;
-//   }
-// }
-
-// .post-container {
-//   margin: 0 auto;
-//   max-width: 42rem;
-// }
 
 // Index PAGE
 
@@ -141,29 +115,11 @@ h4,
     margin-bottom: 0.33em;
   }
 
-  // scale 1.25
-  // h1{ font-size: 3.05rem; }
-  // h2{ font-size: 2.441rem; }
-  // h3{ font-size: 1.953rem; }
-  // h4{ font-size: 1.563rem; }
-  // h5{ font-size: 1.25rem; }
-  // h6{ font-size: 1rem; }
   // scale 1.20
-  h1 {
-    font-size: 2.074rem;
-  }
-  h2 {
-    font-size: 1.728rem;
-  }
-  h3 {
-    font-size: 1.266rem;
-  }
-  h4 {
-    font-size: 1.44rem;
-  }
-  h5 {
-    font-size: 1.2rem;
-  }
+  h1 { font-size: 2.074rem; }
+  h2 { font-size: 1.728rem; }
+  h3 { font-size: 1.266rem; }
+  h4 { font-size: 1.44rem; }
 
   blockquote {
     padding: 1.25em 1.5em;
@@ -222,17 +178,6 @@ h4,
     color: #666;
     font-size: 1rem;
   }
-  // .tags{ }
-  // .tag {
-  //   margin: 0.3rem 0.2rem;
-  //   background-color: #eee;
-  //   padding: 0.4em 0.6em;
-  //   border-radius: 3px;
-  // }
-
-  // .tag a {
-  //   color: #444;
-  // }
 
   p:not(:last-child) {
     margin-bottom: 0.8335em 0;
@@ -251,21 +196,26 @@ h4,
 }
 
 .post-container-responsive {
-  // padding: 1em;
   margin: 0 auto;
   max-width: 42rem;
 
   @media (min-width: 971px) and (max-width: 1300px)  {
     margin: 0 auto 0 300px;
   }
-  // @media (min-width: 0) and (max-width: 1300px)  {
-  //   margin: 0 auto 0 300px;
-  // }
 }
 
+// --- SIDEBAR & NAVBAR
 // work with sidebar & Navbar
 
-disable-scroll {
+.navbar{
+  z-index: 100 !important;
+  // border-bottom: 1px solid #eee; 
+  -webkit-box-shadow:  0 2px 4px 2px hsla(0, 0, 0, 0.04);
+  -moz-box-shadow:  0 2px 4px 2px hsla(0, 0, 0, 0.04);
+  box-shadow:  0 2px 4px 2px hsla(0, 0, 0, 0.04);
+}
+
+.disable-scroll {
   overflow: hidden !important;
   overflow-y: hidden !important;
 }
@@ -507,10 +457,6 @@ a:hover .title {
 
     .list-search{
       margin: 1rem;
-      // .list-group-item{
-      //   padding: 0.4em;
-      //   display: block;
-      // }
       li a{
         padding: 0.4rem 1rem;
         display: block;
@@ -568,20 +514,19 @@ a:hover .title {
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
+  img {
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: opacity 1s linear;
+    &.loaded {
+      opacity: 1;
+    }
+  }
 }
 
-.placeholder img {
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: opacity 1s linear;
-}
-
-.placeholder img.loaded {
-  opacity: 1;
-}
 
 .placeholder-img-small {
   filter: blur(20px);
@@ -625,15 +570,6 @@ a:hover .title {
 
 .recent-posts-size-2 {
   height: 150px;
-  // border-radius: 7.5px;
-
-  //   @media (min-width: $tablet) and (max-width: $desktop)  {
-  //     height: 150px;
-  //    }
-
-  //  @media (min-width: $desktop) {
-  //   height: 150px;
-  //  }
 }
 
 .recent-posts {
@@ -756,27 +692,30 @@ img[class="post-list"] {
 .footer {
   background-color: transparent;
 }
-
 /* Related posts */
+
 .related {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+
 .related-posts {
   padding-left: 0;
   list-style: none;
-}
-.related-posts h3 {
-  margin-top: 0;
-}
-.related-posts li small {
-  font-size: 75%;
-  color: #999;
-}
-.related-posts li a:hover {
-  color: #268bd2;
-  text-decoration: none;
-}
-.related-posts li a:hover small {
-  color: inherit;
+  h3 {
+    margin-top: 0;
+  }
+  li {
+    small {
+      font-size: 75%;
+      color: #999;
+    }
+    a:hover {
+      color: #268bd2;
+      text-decoration: none;
+      small {
+        color: inherit;
+      }
+    }
+  }
 }
