--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="content has-text-centered is-size-6">
       <div>Copyright © 2015 - {{ "now" | date: "%Y" }} by Thada Wangthammang</div>
-      <div class="is-size-7">Build date: {{ site.time | date_to_string }}, Powered by <a href="https://jekyllrb.com">Jekyll</a></div>
+      <div class="is-size-7">Build date: <a href="/about/">{{ site.time | date_to_string }}</a>, Powered by <a href="https://jekyllrb.com">Jekyll</a></div>
       {% include user_info.html %}
   </div>
 </footer>
